mod_proxy changes for httpd 2.0.25-dev
  *) apr_uri type/function namespace changes in apr_uri functions
  	 [Doug MacEachern <dougm@covalent.net>]

mod_proxy changes for httpd 2.0.23-dev

  *) break the proxy_http_handler into multiple smaller functions.
     [John Barbee <barbee@veribox.net>]

  *) Fix the proxy when the origin server sends back a 100
     Continue response.  [John Barbee <barbee@veribox.net>]

  *) Change 'readbytes' from apr_size_t to apr_off_t due to change
     in ap_get_brigade's parameters [John Barbee <barbee@veribox.net>]

mod_proxy changes for httpd 2.0.20-dev
  *) Timeout added for backend connections.
     [Victor Orlikowski <v.j.orlikowski@gte.net>]

  *) Fix abort code path in proxy_http.c, similar to FTP fix.
     [Chuck Murcko <chuck@topsail.org>]

  *) Fix FTP ABOR command execution path.
     [Victor Orlikowski <v.j.orlikowski@gte.net>]

  *) FTP return code variable cleanup; fixed problem in login
     [Chuck Murcko <chuck@topsail.org>]

  *) Get PORT working again in the ftp proxy.
     [Victor Orlikowski <v.j.orlikowski@gte.net>]

  *) Return result code check for FTP QUIT, after fixing
     problems with passive connection handling.
     [Victor Orlikowski <v.j.orlikowski@gte.net>]

  *) Reorganize ap_proxy_string_read() internally to not process eos
     buckets.
     [Chuck Murcko <chuck@topsail.org>]
     [Victor Orlikowski <v.j.orlikowski@gte.net>]

  *) Remove result code check for FTP QUIT command. Some servers send
     nothing at all back in response to QUIT.
     [Chuck Murcko <chuck@topsail.org>]
     [Victor Orlikowski <v.j.orlikowski@gte.net>]

mod_proxy changes for httpd 2.0.19

  *) Reverse previous patch since the core reverted.
     [Chuck Murcko <chuck@topsail.org>]

  *) Remove indirection on number of bytes to read for input filters.
     [Chuck Murcko <chuck@topsail.org>]

  *) Fixed a problem with directory listing corruption in the
     PROXY_DIR filter.
     [Graham Leggett <minfrin@sharp.fm>]
